fix: DTOSS-10762 CD Pipeline conditions improvement (#1587)
* fix: CD Pipeline conditions improvement

* Update cd-infrastructure-core-common.yaml

* Update cd-infrastructure-core-common.yaml

* Update cd-infrastructure-core-common.yaml

--- a/.azuredevops/templates/cd-infrastructure-core-common.yaml
+++ b/.azuredevops/templates/cd-infrastructure-core-common.yaml
@@ -29,11 +29,7 @@ stages:
   # Only required until commit hashes are passed in by calling pipeline, except for the
   # PreProd pipeline which needs to retag images to move them from the Dev ACR to the Prod ACR
   displayName: ACR re-tag
-  condition: |
-    and(
-      eq(variables['Build.Reason'], 'Manual'), 
-      in('${{ parameters.retagImages }}', 'true')
-    )
+  condition: in('${{ parameters.retagImages }}', 'true')
   pool:
     name: ${{ parameters.hostPoolName }}
   jobs:
@@ -48,12 +44,11 @@ stages:
             serviceConnection: ${{ parameters.serviceConnection }}
 
 - stage: terraform_deploy
-  displayName: Terraform Deploy
-  condition: |
-    and(
-      eq(variables['Build.Reason'], 'Manual'),
-      in(dependencies.re_tag_stage.result, 'Succeeded', 'Skipped')
-    )
+  ${{ if eq(parameters.terraformActions, 'Apply') }}:
+    displayName: Terraform Deploy
+  ${{ else }}:
+    displayName: Terraform Plan
+  condition: in(dependencies.re_tag_stage.result, 'Succeeded', 'Skipped')
   variables:
     tfVarsFile: ${{ parameters.tfVarsFile }}
   pool:
@@ -75,7 +70,7 @@ stages:
       condition: |
         and(
           eq(dependencies.init_and_plan.outputs['TerraformPlan.changesPresent'], 'true'), 
-          in('${{ parameters.terraformActions }}', 'Apply')
+          eq('${{ parameters.terraformActions }}', 'Apply')
         )
       strategy:
         runOnce:
@@ -88,12 +83,9 @@ stages:
 - stage: db_changes_stage
   displayName: Database changes
   condition: |
-    and(
-      eq(variables['Build.Reason'], 'Manual'),
-      or(
-        in(dependencies.re_tag_stage.result, 'Succeeded', 'Skipped'),
-        eq(dependencies.terraform_deploy.result, 'Succeeded')
-      )
+    or(
+      eq(dependencies.re_tag_stage.result, 'Succeeded'),
+      eq(dependencies.terraform_deploy.jobs.terraform_apply.result, 'Succeeded')
     )
   pool:
     name: ${{ parameters.hostPoolName }}
@@ -113,13 +105,9 @@ stages:
 - stage: restart_functions_stage
   displayName: Restart Function Apps
   condition: |
-    and(
-      eq(variables['Build.Reason'], 'Manual'),
-      or(
-        in(dependencies.re_tag_stage.result, 'Succeeded', 'Skipped'),
-        eq(dependencies.terraform_deploy.result, 'Succeeded'),
-        in(dependencies.db_changes_stage.result, 'Succeeded', 'Skipped')
-      )
+    or(
+      eq(dependencies.re_tag_stage.result, 'Succeeded'),
+      eq(dependencies.terraform_deploy.jobs.terraform_apply.result, 'Succeeded')
     )
   pool:
     name: ${{ parameters.hostPoolName }}
