--- a/scripts/backups/db-restore-container/Dockerfile
+++ b/scripts/backups/db-restore-container/Dockerfile
@@ -1,6 +1,9 @@
 # Use a base image with PowerShell already installed.
 FROM mcr.microsoft.com/powershell:latest
 
+# Create a non-root user and group
+RUN groupadd -r appgroup && useradd -r -g appgroup appuser
+
 # Update package lists and install wget and unzip.
 RUN apt-get update && apt-get install -y wget unzip
 
@@ -14,7 +17,10 @@ RUN wget -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
     && rm sqlpackage.zip \
     && chmod +x /opt/sqlpackage/sqlpackage
 
-# Set the working directory.
+# Switch to the non-root user
+USER appuser
+
+# Set the working directory for the non-root user
 WORKDIR /app
 
 # Copy the PowerShell script into the container.
