fix:Added new validation rules, updated tests. Removed one validation rule.

--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -19,7 +19,7 @@
           "OnFailure": {
             "Name": "OutputExpression",
             "Context": {
-              "Expression":"\"Participant is blocked\""
+              "Expression": "\"Participant is blocked\""
             }
           }
         }
@@ -72,6 +72,24 @@
           }
         ],
         "Expression": "!(reasonForRemoval AND postcode AND primaryCareProvider)"
+      },
+      {
+        "RuleName": "17.AddressLinesNullAndPostcodeDoesNotMatchExisting.NBO.NonFatal",
+        "LocalParams": [
+          {
+            "Name": "addressLines",
+            "Expression": "string.IsNullOrEmpty(newParticipant.AddressLine1) && string.IsNullOrEmpty(newParticipant.AddressLine1) && string.IsNullOrEmpty(newParticipant.AddressLine3) && string.IsNullOrEmpty(newParticipant.AddressLine4) && string.IsNullOrEmpty(newParticipant.AddressLine5)"
+          },
+          {
+            "Name": "emptyPostcode",
+            "Expression": "string.IsNullOrEmpty(newParticipant.Postcode)"
+          },
+          {
+            "Name": "PostcodeDoesNotMatch",
+            "Expression": "string.Equals(newParticipant.Postcode, existingParticipant.Postcode, StringComparison.OrdinalIgnoreCase) == false"
+          }
+        ],
+        "Expression": "!((emptyPostcode OR PostcodeDoesNotMatch) AND addressLines)"
       }
     ]
   }
