--- a/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
@@ -56,6 +56,8 @@ parameters:
       - regression_e2e_epic1
       - regression_e2e_epic2
       - regression_e2e_epic3
+      - regression_e2e_epic4c
+      - regression_e2e_epic4d
 
 variables:
   - name: hostPoolName
