--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -59,6 +59,8 @@ services:
       - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
       - RetrievePdsDemographicURL=http://retrieve-pds-demographic:8082/api/RetrievePDSDemographic
       - UnsubscribeNemsSubscriptionUrl=http://manage-nems-subscription:9081/api/Unsubscribe
+      # CAAS manage subscription stub available at manage-caas-subscription when needed
+      # - UnsubscribeCaasSubscriptionUrl=http://manage-caas-subscription:9084/api/Unsubscribe
       - DemographicDataServiceURL=http://participant-demographic-data-service:7993/api/ParticipantDemographicDataService
       - ServiceBusConnectionString_client_internal=Endpoint=sb://service-bus;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
       - ParticipantManagementTopic=participant-management-topic
@@ -124,6 +126,7 @@ services:
       - SendServiceNowMessageURL=http://servicenow-message-handler:9092/api/servicenow/send
       - ParticipantManagementURL=http://participant-management-data-service:7994/api/ParticipantManagementDataService
       - ManageNemsSubscriptionSubscribeURL=http://manage-nems-subscription:9081/api/Subscribe
+      # - ManageNemsSubscriptionSubscribeURL=http://manage-caas-subscription:9084/api/Subscribe
       - CohortDistributionTopic=cohort-distribution-topic
 
   update-blocked-flag:
@@ -144,6 +147,8 @@ services:
       - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
       - ManageNemsSubscriptionUnsubscribeURL=http://manage-nems-subscription:9081/api/Unsubscribe
       - ManageNemsSubscriptionSubscribeURL=http://manage-nems-subscription:9081/api/Subscribe
+      # - ManageNemsSubscriptionUnsubscribeURL=http://manage-caas-subscription:9084/api/Unsubscribe
+      # - ManageNemsSubscriptionSubscribeURL=http://manage-caas-subscription:9084/api/Subscribe
       - RetrievePdsDemographicURL=http://etrieve-pds-demographic:8082/api/RetrievePdsDemographic
 
   delete-participant:
@@ -292,6 +297,31 @@ services:
         - IsStubbed=true
       ports:
         - "9081:9081"
+
+  manage-caas-subscription:
+      container_name: manage-caas-subscription
+      image: cohort-manager-manage-caas-subscription
+      networks: [cohman-network]
+      profiles: [nems]
+      build:
+        context: ./src/Functions/
+        dockerfile: DemographicServices/ManageCaasSubscription/Dockerfile
+      environment:
+        - ASPNETCORE_URLS=http://*:9084
+        - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+        - AzureWebJobsStorage=${AZURITE_CONNECTION_STRING}
+        - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
+        - MeshApiBaseUrl=https://localhost:8700/messageexchange
+        - MeshCaasPassword=password
+        - MeshCaasSharedKey=TestKey
+        - MeshCaasKeyName=
+        - MeshCaasKeyPassword=
+        - IsStubbed=false
+        - CaasToMailbox=${CAAS_SUBSCRIBE_TO_MAILBOX:-CAAS_TO}
+        - CaasFromMailbox=${CAAS_SUBSCRIBE_FROM_MAILBOX:-CAAS_FROM}
+        - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+      ports:
+        - "9084:9084"
 
   durable-demographic-function:
     container_name: durable-demographic-function
