--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Start application and run Regression tests
+      - name: Start application and run E2E tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
@@ -55,16 +55,6 @@ jobs:
 
           # Run the tests
           npm run test:e2e
-
-      - name: Run Epic 4A tests
-        env:
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
-          SERVICE_NAME: ${{ vars.SERVICE_NAME }}
-          NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
-          EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
-          COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-          APP_ENV: ${{ vars.APP_ENV }}
-        run: npm run test:e2e:epic_4a
 
       - name: Upload test results
         if: always()
