--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -35,26 +35,14 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Start application and run E2E tests
+      - name: Run E2E tests
         env:
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
+          APP_ENV: ${{ vars.APP_ENV }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
           COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-          APP_ENV: ${{ vars.APP_ENV }}
-        run: |
-          # Start the app in background
-          npm run dev:secure &
-
-          # Wait for the app to be ready
-          while ! curl -s https://localhost:3000 > /dev/null; do
-            echo "Waiting for app to start..."
-            sleep 5
-          done
-
-          # Run the tests
-          npm run test:e2e
+        run: npm run test:e2e
 
       - name: Upload test results
         if: always()
