--- a/application/CohortManager/src/Web/.env.tests
+++ b/application/CohortManager/src/Web/.env.tests
@@ -1,10 +1,9 @@
 # Default
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-APP_ENV=development
 SERVICE_NAME="Cohort Manager"
+APP_ENV=development
 
 # Next Auth
-NEXTAUTH_SECRET= # Random non secret string
+NEXTAUTH_URL=http://localhost:3000/api/auth
 
 # API
 EXCEPTIONS_API_URL=http://localhost:3000
