fix: fix broken tests, configuration and add unit tests (#1556)
* fix: fix broken tests, configuration and add unit tests

* fix: fix jest config and ignore act files

* fix: rewrite all tests into feature files ready for steps

* test: add playwright bdd tests for pages and components

* test: use the correct heading on overview page

* test: fix tests for not raised exceptions and overview

* fix: fix missing data in reports and fix tests for exceptions

* test: fix the tests for not raised exceptions

* test: complete pagination tests and finish all other test

* fix: remove extra workflow step and add error handling to steps

* test: add tests for 404 and superseded by NHS number

* test: refactor tests to remove duplicates and improve readbility

* test: run the playwright tests on non https for pipeline

* test: add missing secret to the workflow file

* test: use the correct secret name for RBAC

* fix: remove unneeded comments

* test: add test for service now case id input

* test: add test for validating service now to raised exceptions

* test: allow for empty service case ID in raised isEditMode

--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -21,48 +21,29 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: "lts/*"
+          check-latest: true
           cache: "npm"
           cache-dependency-path: application/CohortManager/src/Web/package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Run Unit tests
+        run: npm run test:unit
+
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Start application and run tests
+      - name: Run E2E tests
         env:
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
+          APP_ENV: ${{ vars.APP_ENV }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
-          COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-        run: |
-          # Start the app in background
-          npm run dev:secure &
-
-          # Wait for the app to be ready
-          while ! curl -s https://localhost:3000 > /dev/null; do
-            echo "Waiting for app to start..."
-            sleep 5
-          done
-
-          # Run the tests
-          npm run test:e2e
-
-      - name: run epic 4a tests
-        env:
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
-          SERVICE_NAME: ${{ vars.SERVICE_NAME }}
-          NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
-          EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
-          COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-        run: |
-
-
-          # Run the tests
-          npm run test:e2e:epic_4a
+          COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_RBAC_CODE }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+        run: npm run test:e2e
 
       - name: Upload test results
         if: always()
