--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -7,16 +7,15 @@
     "dev:secure": "next dev --turbo --experimental-https",
     "build": "next build",
     "start": "next start",
-    "test": "pnpm run test:unit",
+    "test": "npm run test:unit",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
-    "test:e2e": "npx bddgen && npx playwright test --grep=\"@regression\"",
-    "test:e2e:epic_4a": "npx bddgen && npx playwright test --grep=\" @epic_4a\"",
-    "test:e2e:ui": "playwright test --ui",
+    "test:e2e": "npx bddgen && npx playwright test",
     "lint": "next lint"
   },
   "dependencies": {
+    "axe-playwright": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.25",
