--- a/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
@@ -9,7 +9,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: 5603d4113500a7df3d7320e675fef9598c3aac65
+      ref: 6ef691d0ed3ff16b12a06692c258f6c950be6507
       endpoint: NHSDigital
 
 parameters:
@@ -91,6 +91,7 @@ stages:
     retagImages: ${{ parameters.retagImages }}
     retagImagesFrom: ${{ parameters.dockerImageReTagFrom }}
     retagImagesTo: ${{ parameters.dockerImageReTagTo }}
+    slackWebHook: $(SLACK_WEBHOOK_URL_WORKFLOWS)
 
 # Loop to create test stages dynamically based on the testTypes parameter
 - ${{ each testType in parameters.testTypes }}:
