chore: Created a .NET Aspire AppHost project for local development

--- a/application/CohortManager/src/Functions/DemographicServices/ManageNemsSubscription/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/DemographicServices/ManageNemsSubscription/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "ParticipantManagement": {
+    "ManageNemsSubscription": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7994",
+      "commandLineArgs": "--port 9081",
       "launchBrowser": false
     }
   }
