--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "ScreeningValidationService": {
+    "LookupValidation": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7117",
+      "commandLineArgs": "--port 7075",
       "launchBrowser": false
     }
   }
