--- a/application/CohortManager/src/Functions/CohortDistributionServices/RetrieveCohortRequestAudit/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/CohortDistributionServices/RetrieveCohortRequestAudit/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "RetrieveAuditHistory": {
+    "RetrieveCohortRequestHistory": {
       "commandName": "Project",
       "commandLineArgs": "--port 7086",
       "launchBrowser": false
