--- a/application/CohortManager/src/Functions/screeningDataServices/ScreeningLkpDataService/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/screeningDataServices/ScreeningLkpDataService/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "RetrieveCohortDistribution": {
+    "ScreeningLkpDataService": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7078",
+      "commandLineArgs": "--port 8996",
       "launchBrowser": false
     }
   }
