--- a/application/CohortManager/src/Functions/ExceptionHandling/UpdateException/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/ExceptionHandling/UpdateException/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "RetrieveCohortDistribution": {
+    "UpdateException": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7078",
+      "commandLineArgs": "--port 7072",
       "launchBrowser": false
     }
   }
