feat: Category Enum value change

--- a/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
@@ -126,7 +126,7 @@
     "WorkflowName": "AMENDED",
     "Rules": [
       {
-        "RuleName": "53.CurrentPostingAndPrimaryCareProvider.NBO.NonFatal",
+        "RuleName": "53.CurrentPostingAndPrimaryCareProvider.Non.NonFatal",
         "LocalParams": [
           {
             "Name": "currentPosting",
