--- a/tests/UnitTests/NemsSubscriptionServiceTests/ProcessNemsUpdateTests/ProcessNemsUpdateTests.csproj
+++ b/tests/UnitTests/NemsSubscriptionServiceTests/ProcessNemsUpdateTests/ProcessNemsUpdateTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-  <ProjectGuid>{dbc2ef4b-d50c-4abc-8120-02e619e63cbd}</ProjectGuid>
+    <ProjectGuid>{dbc2ef4b-d50c-4abc-8120-02e619e63cbd}</ProjectGuid>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -21,11 +21,19 @@
   <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="PatientMocks/nems-bundle.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\application\CohortManager\src\Functions\NemsSubscriptionService\ProcessNemsUpdate\ProcessNemsUpdate.csproj" />
-    <ProjectReference Include="..\..\..\..\application\CohortManager\src\Functions\Shared\Common\Common.csproj" />
-    <ProjectReference Include="..\..\..\..\application\CohortManager\src\Functions\Shared\DataServices.Client\DataServices.Client.csproj" />
+    <ProjectReference
+      Include="..\..\..\..\application\CohortManager\src\Functions\NemsSubscriptionService\ProcessNemsUpdate\ProcessNemsUpdate.csproj" />
+    <ProjectReference
+      Include="..\..\..\..\application\CohortManager\src\Functions\Shared\Common\Common.csproj" />
+    <ProjectReference
+      Include="..\..\..\..\application\CohortManager\src\Functions\Shared\DataServices.Client\DataServices.Client.csproj" />
   </ItemGroup>
 
 </Project>
