chore: Added remaining projects

--- a/application/CohortManager/src/Functions/NemsSubscriptionService/ProcessNemsUpdate/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/NemsSubscriptionService/ProcessNemsUpdate/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "NemsMeshRetrieval": {
+    "ProcessNemsUpdate": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7068",
+      "commandLineArgs": "--port 9083",
       "launchBrowser": false
     }
   }
