--- a/application/CohortManager/src/Functions/ServiceNowIntegration/ServiceNowCohortLookup/Properties/launchSettings.json
+++ b/application/CohortManager/src/Functions/ServiceNowIntegration/ServiceNowCohortLookup/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "NemsMeshRetrieval": {
+    "ServiceNowCohortLookup": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7068",
+      "commandLineArgs": "--port 9092",
       "launchBrowser": false
     }
   }
