--- a/application/CohortManager/src/Functions/ServiceNowIntegration/ServiceNowMessageHandler/ServiceNowMessageHandler.csproj
+++ b/application/CohortManager/src/Functions/ServiceNowIntegration/ServiceNowMessageHandler/ServiceNowMessageHandler.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
+    <ProjectReference Include="..\..\Shared\DataServices.Client\DataServices.Client.csproj" />
     <ProjectReference Include="..\..\Shared\HealthChecks\HealthChecks.csproj" />
   </ItemGroup>
 </Project>
