--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -79,24 +79,24 @@
         ],
         "Expression": "!((emptyPostcode OR PostcodeDoesNotMatch) AND addressLines)"
       },
-           {
+      {
         "RuleName": "51.ParticipantLocationRemainingOutsideOfCohort.ParticipantLocationRemainingOutsideOfCohort.NonFatal",
         "LocalParams": [
           {
             "Name": "ExistingParticipantInDMS",
-            "Expression": "(!string.IsNullOrEmpty(existingParticipant.CurrentPosting) AND  existingParticipant.CurrentPosting == \"DMS\" AND !string.IsNullOrEmpty(existingParticipant.PrimaryCareProvider) AND dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(existingParticipant.PrimaryCareProvider))"
+            "Expression": "(!string.IsNullOrEmpty(existingParticipant.CurrentPosting) AND string.Equals(existingParticipant.CurrentPosting, \"DMS\", StringComparison.OrdinalIgnoreCase) AND !string.IsNullOrEmpty(existingParticipant.PrimaryCareProvider) AND dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(existingParticipant.PrimaryCareProvider))"
           },
           {
             "Name": "existingParticipantPosting",
-            "Expression": "ExistingParticipantInDMS OR (dbLookup.RetrievePostingCategory(existingParticipant.CurrentPosting) == \"WALES\")"
+            "Expression": "ExistingParticipantInDMS OR string.Equals(dbLookup.RetrievePostingCategory(existingParticipant.CurrentPosting), \"WALES\", StringComparison.OrdinalIgnoreCase)"
           },
           {
             "Name": "NewParticipantInDMS",
-            "Expression": "(!string.IsNullOrEmpty(existingParticipant.CurrentPosting) AND  newParticipant.CurrentPosting == \"DMS\" AND !string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) AND dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(newParticipant.PrimaryCareProvider))"
+            "Expression": "(!string.IsNullOrEmpty(newParticipant.CurrentPosting) AND string.Equals(newParticipant.CurrentPosting, \"DMS\", StringComparison.OrdinalIgnoreCase) AND !string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) AND dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(newParticipant.PrimaryCareProvider))"
           },
           {
             "Name": "newParticipantPosting",
-            "Expression": "NewParticipantInDMS OR (dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) == \"WALES\")"
+            "Expression": "NewParticipantInDMS OR string.Equals(dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting), \"WALES\", StringComparison.OrdinalIgnoreCase)"
           }
         ],
         "Expression": "!(existingParticipantPosting AND newParticipantPosting)",
