--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -156,7 +156,7 @@ jobs:
       contents: read
     uses: ./.github/workflows/stage-4-deploy.yaml
     with:
-      environments: "[\"development\",\"nft\"]"
+      environments: "[\"development\",\"nft\",\"integration\"]"
       commit_sha: ${{ github.sha }}
     secrets: inherit
   validate-title-stage:
