fix: separated mesh config names, disabled stub

--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -310,7 +310,7 @@ services:
         - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
         - AzureWebJobsStorage=${AZURITE_CONNECTION_STRING}
         - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
-        - MeshApiBaseUrl=https://localhost:8700/messageexchange
+        - CaasSubscriptionMeshApiBaseUrl=https://localhost:8700/messageexchange
         - MeshCaasPassword=password
         - MeshCaasSharedKey=TestKey
         - MeshCaasKeyName=
